--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,41 @@
-# OpenClaw config (contains API keys)
+# OpenClaw 配置文件（包含 API Keys）
 .openclaw/
 openclaw.json
+mcp.json
 
-# Memory (personal data)
+# 记忆文件（个人数据）
 memory/
 MEMORY.md
 
-# Logs
+# 用户信息（个人隐私）
+USER.md
+MASTER-HANDBOOK.md
+
+# 日志
 *.log
 logs/
 
-# OS files
+# OS 文件
 .DS_Store
 Thumbs.db
 desktop.ini
 
-# Editor
+# 编辑器
 .vscode/
 .idea/
 *.swp
 *.swo
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
+
+# Node
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# 技能缓存
+.clawhub/
